--- a/destroy_lonely.html
+++ b/destroy_lonely.html
@@ -26,7 +26,7 @@
             <div class="popular-songs">
                 <h3>Popularne</h3>
                 <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                    <img src="images/lone/iflooksck.jfif" alt="If Looks Could Kill Album Cover">
+                    <img src="images/lone/iflooksck.png" alt="If Looks Could Kill Album Cover">
                     <p>if looks could kill</p>
                     <p>Destroy Lonely</p>
                 </div>
@@ -36,7 +36,7 @@
                     <p>Destroy Lonely</p>
                 </div>
                 <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                    <img src="images/lone/iflooksck.jfif" alt="If Looks Could Kill album cover">
+                    <img src="images/lone/iflooksck.png" alt="If Looks Could Kill album cover">
                     <p>how u feel?</p>
                     <p>Destroy Lonely</p>
                 </div>
@@ -46,17 +46,17 @@
                 <h3>Albumy</h3>
                 <div class="album">
                     <h4>If Looks Could Kill</h4>
-                    <img src="images/lone/iflooksck.jfif" alt="if looks could kill album cover">
+                    <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                     <p>2023</p>
                 </div>
                 <div class="album">
                     <h4>NO STYLIST</h4>
-                    <img src="images/lone/nostylist.jfif" alt="nostylist album cover">
+                    <img src="images/lone/nostylist.png" alt="nostylist album cover">
                     <p>2022</p>
                 </div>
                 <div class="album">
                     <h4> &lt;/3²</h4>
-                    <img src="images/lone/love.jfif" alt="love album cover">
+                    <img src="images/lone/love.png" alt="love album cover">
                     <p>2020</p>
                 </div>
             </div>
