--- a/main_page.html
+++ b/main_page.html
@@ -28,7 +28,7 @@
                 <div class="recent-music">
                     <div class="cover">
                         <h3>HOW U FEEL?</h3>
-                        <img src="images/lone/iflooksck.jfif" alt="Destroy Lonely If looks cood kill album cover">
+                        <img src="images/lone/iflooksck.png" alt="Destroy Lonely If looks cood kill album cover">
                         <p>Destroy Lonely</p>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <p><a href="playboi_carti.html">Playboi Carti</a></p>
                 </div>
                 <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                    <img src="images/lone/iflooksck.jfif" alt="if looks could kill album cover">
+                    <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                     <p>which way</p>
                     <p><a href="playboi_carti.html">Destroy Lonely</a></p>
                 </div>
