--- a/my_playlists.html
+++ b/my_playlists.html
@@ -33,7 +33,7 @@
                         <p>Playboi Carti</p>
                     </div>
                     <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                        <img src="images/lone/iflooksck.jfif" alt="if looks could kill album cover">
+                        <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                         <p>HOW U FEEL?</p>
                         <p>Destroy Lonely</p>
                     </div>
@@ -57,22 +57,22 @@
                 </div>
                 <div class="playlist-musics">
                     <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                        <img src="images/lone/iflooksck.jfif" alt="if looks could kill album cover">
+                        <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                         <p>HOW U FEEL?</p>
                         <p>Destroy Lonely</p>
                     </div>
                     <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                        <img src="images/lone/iflooksck.jfif" alt="if looks could kill album cover">
+                        <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                         <p>HOW U FEEL?</p>
                         <p>Destroy Lonely</p>
                     </div>
                     <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                        <img src="images/lone/iflooksck.jfif" alt="if looks could kill album cover">
+                        <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                         <p>HOW U FEEL?</p>
                         <p>Destroy Lonely</p>
                     </div>
                     <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                        <img src="images/lone/iflooksck.jfif" alt="if looks could kill album cover">
+                        <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                         <p>HOW U FEEL?</p>
                         <p>Destroy Lonely</p>
                     </div>
