--- a/playboi_carti.html
+++ b/playboi_carti.html
@@ -67,7 +67,7 @@
                 <h2>Playboi Carti</h2>
                 <p>59 038 576 słuchaczy w miesiącu</p>
             </div>
-            <img src="images/carti/cartipfp.jfif" alt="Playboi Carti Image">
+            <img src="images/carti/cartipfp.png" alt="Playboi Carti Image">
             <p>Playboi Carti to amerykański raper i producent muzyczny, który zdobył ogromną popularność wśród młodego pokolenia. Jego unikalny styl rapu, energiczne występy sceniczne oraz charakterystyczne brzmienie sprawiają, że jest jednym z najbardziej rozpoznawalnych artystów w branży muzycznej.</p>
         </div>
     </main>
