--- a/popular_now.html
+++ b/popular_now.html
@@ -24,7 +24,7 @@
         <div class="artist-popular">
             <div class="artist-info">
                 <h2>Playboi Carti</h2>
-                <img src="images/carti/cartipfp.jfif" alt="Playboi Cartis Image">
+                <img src="images/carti/cartipfp.png" alt="Playboi Cartis Image">
             </div>
             <div class="artist-music">
                 <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
@@ -63,12 +63,12 @@
             </div>
             <div class="artist-music">
                 <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                    <img src="images/lone/iflooksck.jfif" alt="if looks could kill album cover">
+                    <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                     <p>if looks could kill</p>
                     <p>Destroy Lonely</p>
                 </div>
                 <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                    <img src="images/lone/iflooksck.jfif" alt="if looks could kill album cover">
+                    <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                     <p>which way</p>
                     <p>Destroy Lonely</p>
                 </div>
