--- a/popular_now.html
+++ b/popular_now.html
@@ -83,7 +83,7 @@
                     <p>Destroy Lonely</p>
                 </div>
                 <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
-                    <img src="images/lone/love.jpg" alt="love album cover">
+                    <img src="images/lone/love.png" alt="love album cover">
                     <p>Oh Yeah</p>
                     <p>Destroy Lonely</p>
                 </div>
