--- a/main_page.html
+++ b/main_page.html
@@ -57,27 +57,27 @@
             </div>
             <div class="recommended">
                 <h2>RECOMMENDED FOR YOU</h2>
-                <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
+                <div class="music">
                     <img src="images/carti/playboicarti.png" alt="playboi carti album cover">
                     <p>Magnolia</p>
                     <p><a href="playboi_carti.html">Playboi Carti</a></p>
                 </div>
-                <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
+                <div class="music">
                     <img src="images/carti/playboicarti.png" alt="playboi carti album cover">
                     <p>wokeuplikethis*</p>
                     <p><a href="playboi_carti.html">Playboi Carti</a></p>
                 </div>
-                <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
+                <div class="music">
                     <img src="images/carti/wholelottared.png" alt="whole lotta red album cover">
                     <p>New Neon</p>
                     <p><a href="playboi_carti.html">Playboi Carti</a></p>
                 </div>
-                <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
+                <div class="music">
                     <img src="images/lone/iflooksck.png" alt="if looks could kill album cover">
                     <p>which way</p>
                     <p><a href="playboi_carti.html">Destroy Lonely</a></p>
                 </div>
-                <div class="music" value="/music/destroy-lonely/howufeel-destrony_lonely.mp3">
+                <div class="music">
                     <img src="images/ken/agckencarson.webp" alt="a great chaos album cover">
                     <p>i need u</p>
                     <p><a href="playboi_carti.html">Ken Carson</a></p>
