--- a/main_page.html
+++ b/main_page.html
@@ -30,6 +30,7 @@
                         <h3>HOW U FEEL?</h3>
                         <img src="images/lone/iflooksck.png" alt="Destroy Lonely If looks cood kill album cover">
                         <p>Destroy Lonely</p>
+                        <i class="fa-solid fa-play" style="color: #000000;"></i>
                     </div>
                 </div>
                 <div class="recent-music">
@@ -37,6 +38,7 @@
                         <h3>Control</h3>
                         <img src="images/carti/wholelottared.png" alt="whole lotta red album cover">
                         <p>Playboi Carti</p>
+                        <i class="fa-solid fa-play" style="color: #000000;"></i>
                     </div>
                 </div>
                 <div class="recent-music">
@@ -44,6 +46,7 @@
                         <h3>WHAT DA OPP SAID</h3>
                         <img src="images/triplin/stillprettytriplin.jpg" alt="still pretty album cover">
                         <p>Eem Triplin</p>
+                        <i class="fa-solid fa-play" style="color: #000000;"></i>
                     </div>
                 </div>
                 <div class="recent-music">
@@ -51,6 +54,7 @@
                         <h3>Nightcore</h3>
                         <img src="images/ken/agckencarson.webp" alt="a great chaos album cover">
                         <p>Ken Carson</p>
+                        <i class="fa-solid fa-play" style="color: #000000;"></i>
                     </div>
                 </div>
                 
